Remove unused bits

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,14 @@ version: 2
 
 jobs:
   build:
-    machine: true
+    docker:
+      - image: circleci/clojure:lein
 
     steps:
       - checkout
 
       - restore_cache:
-          key: v1-morph-{{ checksum "dev-requirements.txt" }}
-
-      - run:
-          name: Install Docker Compose
-          command: |
-            set -ex
-            if [ ! -d "/home/circleci/miniconda3" ]; then
-                curl -s -o /tmp/miniconda.sh \
-                  https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-                /bin/bash /tmp/miniconda.sh -b
-            fi
-            if [ ! -d "/home/circleci/miniconda3/envs/morph" ]; then
-                /home/circleci/miniconda3/bin/conda create --name morph python=3.6 -y
-            fi
-            source ~/miniconda3/bin/activate morph
-            pip install --upgrade -r dev-requirements.txt
+          key: v1-morph-{{ checksum "project.clj" }}
 
       - run:
           name: Install ant
@@ -36,34 +22,17 @@ jobs:
             fi
 
       - save_cache:
-          key: v1-morph-{{ checksum "dev-requirements.txt" }}
+          key: v1-morph-{{ checksum "project.clj" }}
           paths:
-            - ~/miniconda3
             - ~/ant
-
-      - run:
-          name: Build docker container and pull dependencies
-          command: |
-            source ~/miniconda3/bin/activate morph
-            docker-compose build
-            docker-compose pull --ignore-pull-failures
 
       - run:
           name: Run tests
           command: |
-            source ~/miniconda3/bin/activate morph
             mkdir -p ~/test_output
             mkdir -p ~/artifacts
             mkdir -p ~/codox
-            # timing, sigh
-            docker-compose up -d dyn kinesis
-            sleep 10
-            docker-compose run \
-              --volume="${HOME}/test_output:/test_output" \
-              --volume="${HOME}/artifacts:/artifacts" \
-              --volume="${HOME}/codox:/codox" \
-              --volume="${HOME}/ant:/ant" \
-              app sh -c scripts/run_ci.sh
+            scripts/run_ci.sh
 
       - store_test_results:
           path: ~/test_output
